@@ -558,6 +558,7 @@ UNIX_LIB = \
 	termios_tcgetattr.o \
 	termios_tcsendbreak.o \
 	termios_tcsetattr.o \
+	timeb_ftime.o \
 	uio_readv.o \
 	uio_writev.o \
 	unistd_access.o \
@@ -650,6 +651,10 @@ MATH_LIB = \
 	math_floorf.o \
 	math_fma.o \
 	math_fmaf.o \
+	math_fmax.o \
+	math_fmaxf.o \
+	math_fmin.o \
+	math_fminf.o \
 	math_fmod.o \
 	math_fmodf.o \
 	math_fpclassify.o \
