@@ -106,12 +106,13 @@ extern "C" {
 
 /****************************************************************************/
 
-#define	S_ISDIR(m)	(((m) & S_IFMT) == S_IFDIR)	/* directory */
-#define	S_ISCHR(m)	(((m) & S_IFMT) == S_IFCHR)	/* char special */
-#define	S_ISREG(m)	(((m) & S_IFMT) == S_IFREG)	/* regular file */
-#define	S_ISLNK(m)	(((m) & S_IFMT) == S_IFLNK)	/* symbolic link */
-#define	S_ISFIFO(m)	(((m) & S_IFMT) == S_IFIFO)	/* fifo */
-#define	S_ISBLK(m)	(0)							/* block special */
+#define	S_ISDIR(m)	(((m) & S_IFMT) == S_IFDIR)		/* directory */
+#define	S_ISCHR(m)	(((m) & S_IFMT) == S_IFCHR)		/* char special */
+#define	S_ISREG(m)	(((m) & S_IFMT) == S_IFREG)		/* regular file */
+#define	S_ISLNK(m)	(((m) & S_IFMT) == S_IFLNK)		/* symbolic link */
+#define	S_ISFIFO(m)	(((m) & S_IFMT) == S_IFIFO)		/* fifo */
+#define	S_ISBLK(m)	(0)								/* block special */
+#define S_ISSOCK(m)	(((m) & S_IFSOCK) == S_IFSOCK)	/* socket */
 
 /****************************************************************************/
 
